--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koa-webpack-middleware",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "keywords": [
     "react",
     "hot",
@@ -18,6 +18,7 @@
   ],
   "scripts": {
     "lint": "standard | snazzy",
+    "preinstall": "npm run build",
     "test": "npm run lint",
     "build": "npm run lint && babel -d lib/ middleware/",
     "prepublish": "npm run build"
