--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   ],
   "scripts": {
     "lint": "standard | snazzy",
-    "preinstall": "npm run build",
+    "preinstall": "babel -d lib/ middleware/",
     "test": "npm run lint",
     "build": "npm run lint && babel -d lib/ middleware/",
     "prepublish": "npm run build"
